extract monitor and cybernode configuration to separate opstring; set export codebase in opstring services; ServiceStarter sets up rio logging; Sorcer CommonClassLoader also adds classes to Rio CommonClassLoader